{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 33,
  "lineage": "2bdf5dd8-621e-c37a-6c52-b1ca0202b989",
  "resources": [
    {
      "module": "module.quickeats_javaserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f918f7e67a3323f0",
            "arn": "arn:aws:ec2:ap-south-1:397570187833:instance/i-01119683db780115c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01119683db780115c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "javaserverkp",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-014b27b4bfa9dd0c5",
            "private_dns": "ip-10-1-1-123.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.123",
            "public_ip": "13.201.121.234",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0461511e22014188e",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bb2156e47566eac7",
            "tags": {
              "Name": "quickeats_javaserver"
            },
            "tags_all": {
              "Name": "quickeats_javaserver"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-065976fb5dfa49833"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_javaserver.aws_key_pair.keypair",
            "module.quickeats_javaserver.aws_security_group.security_group",
            "module.quickeats_public_subnet.aws_subnet.pubsubnet",
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_javaserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:security-group/sg-065976fb5dfa49833",
            "description": "security group",
            "egress": [],
            "id": "sg-065976fb5dfa49833",
            "ingress": [],
            "name": "terraform-20250812044503045900000001",
            "name_prefix": "terraform-",
            "owner_id": "397570187833",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031c96a5af3234ef1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_javaserver",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:security-group-rule/sgr-0ace5319e0899c81d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": -1,
            "id": "sgr-0ace5319e0899c81d",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-065976fb5dfa49833",
            "security_group_rule_id": "sgr-0ace5319e0899c81d",
            "tags": null,
            "tags_all": {},
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_javaserver.aws_security_group.security_group",
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_javaserver",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:security-group-rule/sgr-0b2c957a5889011c0",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0b2c957a5889011c0",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "ap-south-1",
            "security_group_id": "sg-065976fb5dfa49833",
            "security_group_rule_id": "sgr-0b2c957a5889011c0",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_javaserver.aws_security_group.security_group",
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_public_subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "intgateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:internet-gateway/igw-0aced380443420e0f",
            "id": "igw-0aced380443420e0f",
            "owner_id": "397570187833",
            "region": "ap-south-1",
            "tags": {
              "Name": "quickeatsvpc_ig"
            },
            "tags_all": {
              "Name": "quickeatsvpc_ig"
            },
            "vpc_id": "vpc-031c96a5af3234ef1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_public_subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ig_table_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:route-table/rtb-00e0fa4ce8df2de49",
            "id": "rtb-00e0fa4ce8df2de49",
            "owner_id": "397570187833",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aced380443420e0f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-031c96a5af3234ef1"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_public_subnet.aws_internet_gateway.intgateway",
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_public_subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ig_route_table_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0883f0bcbf7ef8180",
            "region": "ap-south-1",
            "route_table_id": "rtb-00e0fa4ce8df2de49",
            "subnet_id": "subnet-0bb2156e47566eac7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_public_subnet.aws_internet_gateway.intgateway",
            "module.quickeats_public_subnet.aws_route_table.ig_table_table",
            "module.quickeats_public_subnet.aws_subnet.pubsubnet",
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_public_subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsubnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:subnet/subnet-0bb2156e47566eac7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bb2156e47566eac7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "397570187833",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "quickeats_pubsn"
            },
            "tags_all": {
              "Name": "quickeats_pubsn"
            },
            "vpc_id": "vpc-031c96a5af3234ef1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.quickeats_vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.quickeats_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:397570187833:vpc/vpc-031c96a5af3234ef1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-009291a5708fc7fe2",
            "default_route_table_id": "rtb-05fee91eb708b57ae",
            "default_security_group_id": "sg-0a3c39be1fd97ab9e",
            "dhcp_options_id": "dopt-02822ec8bfca243f2",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-031c96a5af3234ef1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05fee91eb708b57ae",
            "owner_id": "397570187833",
            "region": "ap-south-1",
            "tags": {
              "Name": "quickeatsvpc"
            },
            "tags_all": {
              "Name": "quickeatsvpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}